--- a/package.json
+++ b/package.json
@@ -46,8 +46,13 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "autoprefixer": "^9.7.1",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "json-server": "^0.15.1",
+    "prettier": "^1.19.1",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2"
   }
 }
